--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
+    "cors": "^2.8.5",
+    "express": "^4.22.1",
     "fluent-ffmpeg": "^2.1.3",
-    "cors": "^2.8.5"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
